--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -47,11 +47,8 @@
   </head>
   <body>
     <body>
-      <div th:if="${user}">
-        <h1 class="welcome">
-          こんにちは <span th:text="${user.lastName}"></span>様
-        </h1>
-        <p class="hide">権限: <span th:text="${user.authorityName}"></span></p>
+      <div th:if="${user != null}">
+        <p>ようこそ、<span th:text="${user.username}"></span>さん！</p>
       </div>
     </body>
 
