--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,7 +11,7 @@
   </style>
   <body>
     <h2>新規登録</h2>
-    <span th:text="${errorMsg}"></span>
+    <span th:text="${errorMessage}" class="errMsg"></span>
     <form th:action="@{/signup}" method="post" th:object="${signupForm}">
       <div>
         <label>姓</label>
@@ -52,10 +52,12 @@
       <div>
         <label>店舗</label>
         <select th:field="*{storeId}">
-          <option value="" th:selected="*{storeId == null}">選択する</option>
+          <option value="" th:selected="${signupForm.storeId == null}">
+            選択する
+          </option>
           <option value="1">渋谷店</option>
           <option value="2">新宿店</option>
-          <option value="3">渋谷店</option>
+          <option value="3">その他店舗</option>
         </select>
         <span
           th:if="${#fields.hasErrors('storeId')}"
@@ -66,7 +68,7 @@
       <div>
         <label>権限</label>
         <select th:field="*{authorityId}">
-          <option value="" th:selected="*{authorityId == null}">
+          <option value="" th:selected="${signupForm.authorityId == null}">
             選択する
           </option>
           <option value="1">管理者</option>
@@ -81,7 +83,9 @@
       <div>
         <label>ポジション</label>
         <select th:field="*{positionId}">
-          <option value="" th:selected="*{positionId == null}">選択する</option>
+          <option value="" th:selected="${signupForm.positionId == null}">
+            選択する
+          </option>
           <option value="1">店長</option>
           <option value="2">副店長</option>
           <option value="3">マネージャー</option>
