--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -57,7 +57,7 @@
           </option>
           <option value="1">渋谷店</option>
           <option value="2">新宿店</option>
-          <option value="3">その他店舗</option>
+          <option value="3">池袋店</option>
         </select>
         <span
           th:if="${#fields.hasErrors('storeId')}"
