Modified for changed response type to JSON type

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,16 +63,16 @@
         <a th:href="@{/admin_list}">従業員リスト</a>
       </div>
       <div class="grid-item">
-        <a th:href="@{/api/top_categories}">商品一覧</a>
+        <a th:href="@{/top_categories_page}">商品一覧</a>
       </div>
       <div class="grid-item">
-        <a th:href="@{/store_info}">店舗一覧</a>
+        <a th:href="@{/store_info_page}">店舗一覧</a>
       </div>
       <div class="grid-item">
         <a th:href="@{/manufacturer}">取り扱いメーカー</a>
       </div>
       <div class="grid-item">
-        <a th:href="@{/order_history}">注文履歴</a>
+        <a th:href="@{/order_history_page}">注文履歴</a>
       </div>
     </div>
 
